add array to getProjectTaskStatuses method